# ai-agent-cli

./: .env.example  .gitignore  README.md  pyproject.toml
agentcli/: cli.py  config.py  llm.py  prompts.py  sessions.py  ui.py  util.py
agentcli/tools/: __init__.py  base.py  fs.py  registry.py  search.py  shell.py  web.py
quick-def/: README.md  content.js  manifest.json
